completed semi working functions for average rate and the freelacer table

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    <div>
+       <h1>Freelance Forum</h1>
+       <p>The average rate is $<span id="averageRate"></span>.</p>
+    </div> 
+        <thead>
+      <tr>
+        <th>NAME</th>
+        <th>OCCUPATION</th>
+        <th>RATE</th>
+      </tr>
+    </thead>
+    <tbody id="freelancerTable">
+
+    </tbody>
+  </table>
+    </div>
   </body>
 </html>
