--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
   </head>
   <body>
     <div id="app">
-    <div>
-       <h1>Freelance Forum</h1>
-       <p>The average rate is $<span id="averageRate"></span>.</p>
-    </div> 
+      <div>
+        <h1>Freelance Forum</h1>
+        <p>The average rate is $<span id="averageRate"></span>.</p>
+      </div>
+      <table>
         <thead>
-      <tr>
-        <th>NAME</th>
-        <th>OCCUPATION</th>
-        <th>RATE</th>
-      </tr>
-    </thead>
-    <tbody id="freelancerTable">
-
-    </tbody>
-  </table>
+          <tr>
+            <th>NAME</th>
+            <th>OCCUPATION</th>
+            <th>RATE</th>
+          </tr>
+        </thead>
+        <tbody id="freelancerTable"></tbody>
+      </table>
     </div>
   </body>
 </html>
